# kadenverify

./: .gitignore  API_USAGE.md  CATCHALL_VALIDATION_ZERO_COST.md  CLAUDE.md  DATA_SOURCES.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENRICHMENT_DEPLOYMENT_COMPLETE.md  ENRICHMENT_VALIDATION_COMPLETE.md  HANDOFF_BIG_LIST_VERIFICATION_2026-02-23.md  OMNIVERIFIER_SPEED_PARITY.md  PERFORMANCE_OPTIMIZATIONS.md  QUICK_START_API.md  QUICK_START_CATCHALL.md  README.md  SESSION_SUMMARY_2026-02-06.md  USAGE_EXAMPLES.md  api_client_example.py  batch_process.py  batch_verify.py  cli.py  config.example.json  dashboard.py  deploy.sh  docker-compose.yml  findings.md  progress.md  provider_keepalive_loop.sh  pyproject.toml  quick_verify.py  requirements.txt  reverify_loop.py  server.py  server.py.bak.20260225T222342Z  sharded_reverify_cycle.py  start_server.sh  task_plan.md  test_100_client_emails.py  test_emails.txt
.streamlit/: secrets.toml
engine/: catchall_validator.py  dns.py  email_finder.py  enrichment.py  enrichment.py.production  errors.py  metadata.py  models.py  providers.py  smtp.py  syntax.py  tiered_verifier.py  verifier.py
lists/: disposable.txt  free_providers.txt  role_accounts.txt
scripts/: add_feb19_net_new.py  bulk_net_new_consolidated_to_sheet.py  check_needed_net_new.py  drive_parallel_intake_scan.py  provider_keepalive_loop.sh.bak.20260302T182047Z  reverify_forensics_everywhere.sh  reverify_forensics_scan.py  reverify_sheet_sync_loop.sh  waterfall_orchestrate.sh  waterfall_queue_round2.sh
store/: CLAUDE.md  cache.py  duckdb_io.py  supabase_io.py
(+29 files in other folders)
